kubernetes_OLD/yml/zipkin.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: springbootzipkin-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: springbootzipkin
    spec:
      containers:
      - name: springbootzipkin
#        image: marcinkasinski/springbootzipkin
        image: openzipkin/zipkin        
        ports:
        - name: http
          containerPort: 9411
---
apiVersion: v1
kind: Service
metadata:
  name: springbootzipkin
spec:
  type: NodePort
  ports:
  - port: 9411
    targetPort: 9411
    protocol: TCP
    name: http
  selector:
    app: springbootzipkin
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: springbootzipkin-ingress
spec:
  rules:
  - host: springbootzipkin
    http:
      paths:
      - path: /
        backend:
          serviceName: springbootzipkin
          servicePort: 9411


---
#curl -H "Host: springbootzipkin.apps.svc.cluster.local:30999" localhost:30999/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springbootzipkin
spec:
  hosts:
  - "springbootzipkin.apps.svc.cluster.local:30999"
  - "springbootzipkin:30999"
  - "springbootzipkin.com:30999"
  gateways:
  - itzone-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: springbootzipkin # interpreted as springbootzipkin.apps.svc.cluster.local
        #host: ambassador.default.svc.cluster.local # interpreted as springbootzipkin.apps.svc.cluster.local
        port:
          number: 9411
          #number: 80
---
